# caret

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_scan_content_hash.py  0003_finding_triage.py
backend/app/: config.py  db.py  docker_introspect.py  main.py  models.py  normalize.py  queue.py  sarif.py  schemas.py  worker.py
backend/app/api/: scans.py
backend/app/scanners/: __init__.py  base.py  gitleaks.py  semgrep.py  trivy.py
backend/scripts/: entrypoint.sh  prefetch.sh
docs/: API_CONTRACT.md  BUILD_PLAN.md  DATA_MODEL.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  SeverityBadge.tsx  SeveritySummary.tsx  SourceIcon.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/src/lib/: theme.ts  ui.ts
frontend/src/pages/: FindingDetail.tsx  NewScan.tsx  ScanDetail.tsx  ScanList.tsx
test-fixtures/vulnpy/: app.py  requirements.txt
