[project]
name = "secure-code-reviewer-backend"
version = "0.1.0"
description = "Secure Code Reviewer — backend API + worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rq>=2.1",
    "redis>=5.2",
    "docker>=7.1",
    "python-multipart>=0.0.17",
]

[tool.uv]
package = false
